# projectile-simulator

./: .gitignore  CMakeLists.txt  README.MD
docs/: simulation.mov
scripts/: plot_trajectory.py
src/: main.cpp  main_visual.cpp
src/application/: i_exporter.hpp  simulatio.cpp  simulation.cpp  simulation.hpp
src/domain/: forces.cpp  forces.hpp  projectile.cpp  projectile.hpp  vec2.hpp
src/infrastructure/: csv_exporter.cpp  csv_exporter.hpp
